cloud-cli/aks/manifests/argo/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio-injection: disabled
